--- a/README
+++ b/README
@@ -6,12 +6,10 @@ Parsec3. Support of Lazy Text for Lazy Text is found:
 
 	https://github.com/kazu-yamamoto/parsec3/commit/58c268c37e54a470c841c3ef5ecb7722f625552e
 
-This benchmark parses a GNU Texi file and extract strings matched to
-"@samp{...}". You need to prepare a GNU Texi file by yourself.  You
-can download the following and save it as "input.texi" in this
-directory.
+This benchmark parses /usr/share/dict/words and extracts the string
+"tre". You need to prepare /usr/share/dict/words by yourself.
 
-	https://github.com/kazu-yamamoto/Mew/raw/master/info/mew.texi
+	% head -n 10000 /usr/share/dict/words > input
 
 Then execute, the benchmark:
 
